prost-unwrap-proto-tests/tests/ui/with_suffix_duplicate.stderr
error: Multiple `with_suffix` parameters are not allowed
  --> tests/ui/with_suffix_duplicate.rs:12:6
   |
12 |     .with_suffix(Sane)
   |      ^^^^^^^^^^^
